--- a/client_react/public/index.html
+++ b/client_react/public/index.html
@@ -14,7 +14,7 @@
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+        <link rel="shortcut icon" href="%PUBLIC_URL%/kpufavicon.ico">
 
         <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
         <link href="%PUBLIC_URL%/assets/fonts/material-outline-icons/styles.css" rel="stylesheet">
@@ -29,7 +29,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Fuse React - Material Design Admin Template</title>
+        <title>KPU CSS</title>
 
         <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
@@ -40,7 +40,7 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
-                background-color: #2D323D;
+                background-color: white;
                 z-index: 99999;
                 pointer-events: none;
             }
@@ -205,7 +205,7 @@
                 <div class="center">
 
                     <div class="logo">
-                        <img width="128" src="assets/images/logos/fuse.svg" alt="logo">
+                        <img width="128" src="assets/images/logos/kpu-mark_RGB.png" alt="logo">
                     </div>
 
                     <!-- Material Design Spinner -->
